better file names and folder structure

--- a/src/static/popup.html
+++ b/src/static/popup.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>
   <meta charset="UTF-8" />
-  <script src="js/popup.js"></script>
+  <script src="js/popupScript.js"></script>
 </head>
 
 <body>
