use Parcel2 for bundling

--- a/src/static/popup.html
+++ b/src/static/popup.html
@@ -3,8 +3,7 @@
 <head>
   <title></title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="styles.css" charset="UTF-8" />
-  <script src="js/popupScript.js"></script>
+  <script type="module" src="../popupScript.tsx"></script>
 </head>
 
 <body>
