--- a/src/static/popup.html
+++ b/src/static/popup.html
@@ -3,6 +3,7 @@
 <head>
   <title></title>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles.css" charset="UTF-8" />
   <script src="js/popupScript.js"></script>
 </head>
 
